front-end/src/components/chat/chat.module.css
.self {
  text-align: right;
}

.input {
  display: block;
  width: 100%;
  padding: 10px;
  margin-bottom: 10px;
}

.button {
  display: block;
  margin: 10px auto;
}

.chatContainer {
  width: calc(100% + 20px);
  margin-bottom: -10px;
  margin-left: -10px;
  margin-right: -10px;
}

.chatHeader {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: 50px;
  background-color: gray;
  padding: 10px;
}

.messageList {
  padding: 0px 5px;
  width: 100%;
  height: calc(100vh - 200px);
  overflow-y: scroll;
}

